--- a/feedback.html
+++ b/feedback.html
@@ -19,6 +19,7 @@
 	<body>
 	<script src="feedback.js"></script>
 
+	<div id='qoute'></div>
 	<form method="POST" action="https://anon.fm/feedback">
 		<ul>
 			<li>
