--- a/feedback.html
+++ b/feedback.html
@@ -24,8 +24,8 @@
 		<ul>
 			<li>
 				<input type="hidden" name="cid" value="">
-				<input readonly="" type="text" name="left" id="charsleft" size="2" maxlength="3" value="500">
-				<textarea id="te" name="msg" cols="55" rows="4" maxlength="500" placeholder="Максимальная длина 500 символов" required="" autofocus=""></textarea>
+				<!-- <input readonly="" type="text" name="left" id="charsleft" size="2" maxlength="3" value="500"> -->
+				<textarea name="msg" cols="55" rows="4" maxlength="500" placeholder="Максимальная длина 500 символов" required="" autofocus=""></textarea>
 			</li>
 			<li>
 				<img name="captcha" src=""><br>
