--- a/feedback.html
+++ b/feedback.html
@@ -15,14 +15,18 @@
 			input {margin: 5px;}
 			form {overflow:hidden; margin: auto;}
 			#nicks {width:150px;float:left;height:200px;overflow-y:scroll;}
-			#qoute {background-color: #f6f6f6; border-left: 4px solid #9C27B0; margin: auto; width: 80%; overflow-y: scroll;height: 50%}
+			#qoute {background-color: #f6f6f6;margin: auto; width: 80%; overflow-y: scroll;height: 50%}
+			#ask {border-left: 4px solid #2196f3; color: #2196f3;}
 			p {font-size: 1.2em; text-align: left; padding: 4px 4px 4px 20px; word-wrap: break-word;}
 		</style>
 	</head>
 	<body>
 	<script src="feedback.js"></script>
 	<div>
-		<div id='qoute'></div>
+		<div id='qoute'>
+			<p id="ask"></p>
+			<p id="answer"></p>
+		</div>
 		<div>
 			<form>
 				<ul>
