--- a/options.html
+++ b/options.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div>
-        <p><label>Уведомлять об обновлении расписания</label><input type="checkbox" name="schedNotification" checked></p>
-        <p><label>Уведомлять об новых сообщениях</label><input type="checkbox" name="schedNotification" checked></p>
-        <p><label>Проверять расписание каждые </label><input id="schedCheckTime" name="schedule" min="0" type="number" step="1" value="0"><label>мин.</label></p>
-        <p><label>Проверять новые сообщения каждые </label><input id="answersCheckTime" name="schedule" min="0" type="number" step="1"><label>мин.</label></p>
+        <p><label>Уведомлять об обновлении расписания</label><input type="checkbox" id="schedCheckEnable"></p>
+        <p><label>Уведомлять об новых сообщениях</label><input type="checkbox" id="answersCheckEnable"></p>
+        <p><label>Проверять расписание каждые </label><input id="schedCheckTime"  min="1" type="number" step="1"><label>мин.</label></p>
+        <p><label>Проверять новые сообщения каждые </label><input id="answersCheckTime" min="1" type="number" step="1"><label>мин.</label></p>
     </div>    
     <div>
         <button id="save">Сохранить</button>
