replaced xhr fetch

--- a/feedback.html
+++ b/feedback.html
@@ -41,7 +41,7 @@
 					<li>
 						<img name="captcha" src=""><br>
 						<input type="text" name="check" autocomplete="off" style="width: 7em" required="">
-						<input id="btn" type="button" value="Отправить">
+						<button id="btn" type="button">Отправить</button>
 					</li>
 				</ul>
 			</form>
