--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,11 @@
     <title>test</title>
     <body>
         <div id="wrapper">
+            <div id='panel'>
+               
+                <a id="msgBtn" href='#'>sendmsg</a>
+                <a id="options" href='#'>options</a>
+            </div>
         	<div id='dj'></div>
         	<div id="video"></div>
             <div id="currentBroadcast"></div>
