--- a/popup.html
+++ b/popup.html
@@ -11,18 +11,15 @@
 		}
         p {color: #996793;}
         a {text-decoration: none}
-        span {font-size: 1.5em; color: #996793; padding: 15px;}
+        #panel span {font-size: 1.5em; color: #996793; padding: 15px;}
         #wrapper {
             text-align: center;
         }
         #next {
             display: block;
             font-size: 1.17em;
-            -webkit-margin-before: 1em;
-
-            -webkit-margin-start: 0px;
-            -webkit-margin-end: 0px;
             font-weight: bold;
+            margin-bottom: 3px;
         }
         #panel { 
             border-bottom-style: solid;
