--- a/options.html
+++ b/options.html
@@ -16,7 +16,7 @@
   <body>
     <div>
         <p><label>Уведомлять об обновлении расписания</label><input type="checkbox" id="schedCheckEnable"></p>
-        <p><label>Уведомлять об новых сообщениях</label><input type="checkbox" id="answersCheckEnable"></p>
+        <p><label>Уведомлять о новых сообщениях</label><input type="checkbox" id="answersCheckEnable"></p>
         <p><label>Проверять расписание каждые </label><input id="schedCheckTime"  min="1" type="number" step="1"><label>мин.</label></p>
         <p><label>Проверять новые сообщения каждые </label><input id="answersCheckTime" min="1" type="number" step="1"><label>мин.</label></p>
     </div>
