--- a/feedback.html
+++ b/feedback.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Написать диджею</title>
-		<link rel="stylesheet" type="text/css" href="https://anon.fm/photon.css">
-		<link rel="stylesheet" type="text/css" href="https://anon.fm/info.css">
+		<link rel="stylesheet" type="text/css" href="css/photon.css">
+		<link rel="stylesheet" type="text/css" href="css/info.css">
 		<style>
 			body,html{height:100%;}
 			body {text-align: center;overflow:hidden}
@@ -23,7 +23,7 @@
 		</style>
 	</head>
 	<body>
-	<script src="feedback.js"></script>
+	<script src="js/feedback.js"></script>
 	<div>
 		<div id='qoute'>
 			<p id="ask"></p>
