--- a/options.html
+++ b/options.html
@@ -24,6 +24,6 @@
         <button id="save">Сохранить</button>
         <span id="savedMsg"></span>
     </div>
-        <script src="options.js"></script>
+        <script src="js/options.js"></script>
   </body>
 </html>
