--- a/popup.html
+++ b/popup.html
@@ -44,5 +44,5 @@
         	<div id="nextBroadcast"></div>
         </div>
     </body>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </html>
