Несколько маленьких изменений

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<title>Asian Wave</title>
 	<link rel="stylesheet" href="code/css/popup.min.css">
-	<link rel="stylesheet" href="https://asianwave.ru/files/code/styles/chrome-app-events.min.css">
+	<link rel="stylesheet" href="https://asianwave.ru/files/code/css/chrome-app-events.min.css">
 </head><body>
 	<div class="container">
 		<header class="top-panel">
@@ -21,7 +21,7 @@
 		<main>
 			<div class="links">
 				<a href="https://asianwave.ru" target="_blank"><i class="icon icon-home"></i></a>
-				<a href="https://vk.com/awaveradio" target="_blank" rel="nofollow noopener"><i class="icon icon-vk"></i></a>
+				<a href="https://vk.com/asianwaveru" target="_blank" rel="nofollow noopener"><i class="icon icon-vk"></i></a>
 			</div>
 			<div class="tabs_tabs">
 				<div id="tab_radio">
