--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
 		<tr>
 			<td><label class="tr--schedCheckTime"></label></td>
 			<td>
-				<input id="schedCheckTime" min="1" type="number" step="1">
+				<input id="schedCheckTime" min="1" step="1" type="number">
 				<label id="minTs"></label>
 			</td>
 		</tr>
