--- a/options.html
+++ b/options.html
@@ -28,5 +28,5 @@
 		<button id="save"></button>
 		<span id="saveMsg"></span>
 	</div>
-	<script src="code/js/options.min.js"></script>
+	<script src="code/js/options.min.js" defer></script>
 </body></html>
