--- a/popup.html
+++ b/popup.html
@@ -15,32 +15,34 @@
 				</ul>
 			</div>
 			<div class="right">
-				<a class="options" href="javascript:void(0);"><i class="icon icon-gear"></i></a>
+				<a class="options" href="javascript:void(0)" data-tr-title="options"><i class="icon icon-gear"></i></a>
 			</div>
 		</header>
 		<main>
 			<div class="links">
-				<a href="https://asianwave.ru" target="_blank"><i class="icon icon-home"></i></a>
-				<a href="https://vk.com/asianwaveru" target="_blank" rel="nofollow noopener"><i class="icon icon-vk"></i></a>
+				<a href="https://asianwave.ru?from=chrome" target="_blank" data-tr-title="awSite"><i class="icon icon-home"></i></a>
+				<a href="https://vk.com/asianwaveru" target="_blank" rel="nofollow noopener" data-tr-title="awVKPage"><i class="icon icon-vk"></i></a>
 			</div>
 			<div class="content">
 				<div class="player">
 					<div class="playpause"><i class="icon icon-play"></i></div>
-					<input class="volume" type="range" step="0.1" min="0" max="100">
+					<input class="volume" type="range" step="1" min="0" max="100">
 				</div>
 				<div class="tabs_tabs">
-					<div id="tab_radio">
+					<section data-tab="radio">
 						<div class="section nowRJ"></div>
 						<div class="section nowPlay"></div>
-					</div>
-					<div id="tab_anime">
+					</section>
+					<section data-tab="anime">
 						<div class="section currentBroadcast"></div>
 						<div class="section nextBroadcast"></div>
-					</div>
+					</section>
 				</div>
-		</div>
+			</div>
 		</main>
 	</div>
+	<script src="code/js/kamina.min.js" defer></script>
+	<script src="code/js/every.min.js" defer></script>
 	<script src="code/js/main.min.js" defer></script>
 	<script src="code/js/popup.min.js" defer></script>
 </body></html>
