--- a/options.html
+++ b/options.html
@@ -8,11 +8,7 @@
 		<table>
 			<tr>
 				<td><label data-tr="radioPick"></label></td>
-				<td><select class="radioPoint">
-					<option value="jp">Japan</option>
-					<option value="ru">Russia</option>
-					<option value="kr">Korea</option>
-				</select></td>
+				<td><select class="radioPoint"></select></td>
 			</tr>
 			<tr>
 				<td><label data-tr="schedCheckEnable"></label></td>
